Extended Geometry Messages; Added Pose2D Publisher; Added RosConverter Class with; Note RosConverter Class intends to extend / replace the conversion functions Unity2Ros and Ros2Unity in the TransformExtension class. Since the functions in the RosConverter class don't rely on heap allocation they are considered to have better performance since they're not invoking Unity GC.

--- a/Libraries/RosBridgeClient/RosBridgeClient.csproj
+++ b/Libraries/RosBridgeClient/RosBridgeClient.csproj
@@ -58,11 +58,15 @@
     <Compile Include="Messages\Geometry\Point.cs" />
     <Compile Include="Messages\Geometry\PointStamped.cs" />
     <Compile Include="Messages\Geometry\Pose.cs" />
+    <Compile Include="Messages\Geometry\Pose2D.cs" />
     <Compile Include="Messages\Geometry\PoseStamped.cs" />
     <Compile Include="Messages\Geometry\PoseWithCovariance.cs" />
     <Compile Include="Messages\Geometry\Quaternion.cs" />
+    <Compile Include="Messages\Geometry\Transform.cs" />
+    <Compile Include="Messages\Geometry\TransformStamped.cs" />
     <Compile Include="Messages\Geometry\Twist.cs" />
     <Compile Include="Messages\Geometry\TwistWithCovariance.cs" />
+    <Compile Include="Messages\Geometry\Vector2D.cs" />
     <Compile Include="Messages\Geometry\Vector3.cs" />
     <Compile Include="Messages\Actionlib\GoalID.cs" />
     <Compile Include="Messages\Actionlib\GoalStatus.cs" />
