--- a/Libraries/RosBridgeClient/RosBridgeClient.csproj
+++ b/Libraries/RosBridgeClient/RosBridgeClient.csproj
@@ -66,7 +66,6 @@
     <Compile Include="Messages\Geometry\TransformStamped.cs" />
     <Compile Include="Messages\Geometry\Twist.cs" />
     <Compile Include="Messages\Geometry\TwistWithCovariance.cs" />
-    <Compile Include="Messages\Geometry\Vector2D.cs" />
     <Compile Include="Messages\Geometry\Vector3.cs" />
     <Compile Include="Messages\Actionlib\GoalID.cs" />
     <Compile Include="Messages\Actionlib\GoalStatus.cs" />
@@ -89,6 +88,7 @@
     <Compile Include="Messages\Standard\Time.cs" />
     <Compile Include="Communicators.cs" />
     <Compile Include="Message.cs" />
+    <Compile Include="Messages\RosApi\TypeDef.cs" />
     <Compile Include="PointCloud.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocols\MessageEventArgs.cs" />
@@ -99,6 +99,7 @@
     <Compile Include="Services\FileServer\GetBinaryFile.cs" />
     <Compile Include="Services\FileServer\SaveBinaryFile.cs" />
     <Compile Include="Services\RosApi\GetParam.cs" />
+    <Compile Include="Services\RosApi\Services.cs" />
     <Compile Include="Services\RosApi\SetParam.cs" />
     <Compile Include="Services\RosApi\Topics.cs" />
     <Compile Include="Services\RosApi\Nodes.cs" />
@@ -113,6 +114,9 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>start xcopy "$(TargetPath)" "$(SolutionDir)\..\Unity3D\Assets\RosSharp\Plugins" /Y /I /C</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
